refactor: change html-formatting accroding to rule 3.2

--- a/style.css
+++ b/style.css
@@ -4,24 +4,24 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.inro {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.inro img {
   width: 100%;
 }
-.aaa .more_inf {
+.inro .intro__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.aaa { text-align: center;
+.inro { text-align: center;
 }
 }
-.centered-main-page-element {
+.page-container {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -31,7 +31,7 @@ body {
   display: inline-block;
   flex-grow: 1
 }
-.task-row-wrapper {
+.section-add-item__inner-container {
   display: flex;
 }
 ul {
