--- a/style.css
+++ b/style.css
@@ -1,49 +1,61 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
+
 .inro {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
+
 .inro img {
   width: 100%;
 }
+
 .inro .intro__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.inro { text-align: center;
-}
+  
+  .inro { 
+    text-align: center;
+  }
+
 }
 .page-container {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
 .task {
   width: 56%;
   display: inline-block;
   flex-grow: 1
 }
+
 .section-add-item__inner-container {
   display: flex;
 }
+
 ul {
   margin:0;
   padding: 0px;
 }
+
 li, h3 {
   list-style:none;
 }
+
 input,button{
   outline:none;
 }
+
 button {
   background: none;
   border: 0px;
@@ -53,10 +65,13 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
+
 button:hover {
   color: #3a3a3a;
 }
+
 /* Heading */
+
 h3,
 label[for= " new-task " ] {
   color: #333;
@@ -67,6 +82,7 @@ label[for= " new-task " ] {
   margin: 0;
   text-transform: uppercase;
 }
+
 input[type="text"] {
   margin: 0;
   font-size: 18px;
@@ -79,16 +95,17 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
+
 input[type="text"]:focus {
   color: #333;
 }
 
 /* New Task */
-label[for= " new-task " ] {
+label[for= "new-task" ] {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
   width: 318px;
 }
 
