--- a/style.css
+++ b/style.css
@@ -49,11 +49,11 @@ ul {
 }
 
 li, h3 {
-  list-style:none;
+  list-style: none;
 }
 
 input,button{
-  outline:none;
+  outline: none;
 }
 
 button {
@@ -160,14 +160,14 @@ button.delete img:hover {
 
 /* Edit Task */
 ul li input[type=text] {
-  display:none
+  display: none;
 }
 
 ul li.editMode input[type=text] {
-  display:inline-block;
-  width:224px
+  display: inline-block;
+  width: 224px;
 }
 
 ul li.editMode label {
-  display:none;
+  display: none;
 }
