--- a/style.css
+++ b/style.css
@@ -48,11 +48,13 @@ ul {
   padding: 0px;
 }
 
-li, h3 {
+li, 
+h3 {
   list-style: none;
 }
 
-input,button{
+input,
+button {
   outline: none;
 }
 
@@ -138,6 +140,7 @@ label[for= "new-task" ] {
   font-size: 18px;
   width: 226px;
 }
+
 .section-incomplete-tasks__item >  input[type="text"],
 .section-completed-tasks__item > input[type="text"] {
   width: 226px;
@@ -163,11 +166,11 @@ ul li input[type=text] {
   display: none;
 }
 
-ul li.editMode input[type=text] {
+ul .editMode input[type=text] {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+ul .editMode label {
   display: none;
 }
