feat: add alt accrording rule html-css-extented 1.2

--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@
   text-align: right;
 }
 
-.inro img {
+.intro img {
   width: 100%;
 }
 
-.inro .intro__link {
+.intro .intro__link {
   font-family: fantasy, cursive;
 }
 
